Fix Example pseudo content not showing in IE11

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -37,9 +37,12 @@
   background: #a5a5a5;
   color: #ffffff;
   content: "Example";
-  font: 300 0.875rem/1.5rem system-ui;
+  display: block;
+  font-family: system-ui;
+  font-size: 0.875rem;
+  font-weight: 300;
   left: 0;
-  padding: 0 0.5rem 0 0.5rem;
+  padding: 0.25rem 0.5rem;
   position: absolute;
   top: 0;
 }
